--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,6 @@ uvicorn==0.25.0
 uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
+sentence_transformers==3.3.1
+pandas==2.2.3
+rapidfuzz==3.10.1
